--- a/portfolio-site/src/variables.scss
+++ b/portfolio-site/src/variables.scss
@@ -11,4 +11,4 @@ $cookie-blue: #005B96;
 $light-page-background: #F3F3F3;
 
 /* Dark theme colors */
-$dark-page-background: #252733;
+$dark-page-background: #171717;
